Attempting to fix item alignment

--- a/src/components/ItemDetails/ItemDetails.module.css
+++ b/src/components/ItemDetails/ItemDetails.module.css
@@ -1,16 +1,83 @@
+/* Base Colors */
+:root {
+    --pink: #FAA0E2;
+}
 
+/* Image */
 .image {
     width: 500px;
     height: 500px;
     border-radius: 10px;
 }
 
+/* Containers */
 .itemContainer {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: center;
+    gap: 100px;
+    align-items: center;
+    margin: 50px 0px 90px;
 }
 
 .itemDetails {
     display: flex;
     flex-flow: column nowrap;
+}
+
+/* Typography */
+/* Google Font */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+h1 {
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    line-height: 0.5;
+}
+
+.price {
+    font-family: "Inter", sans-serif;
+    font-size: 22px;
+    line-height: 0;
+}
+
+.description {
+    font-family: "Inter", sans-serif;
+}
+
+/* Buttons */
+.rectangle {
+    border: 3px solid var(--pink);
+    width: 60px;
+    height: 35px;
+    border-radius: 100px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 15px;
+}
+
+.quantity {
+    font-size: 25px;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+}
+
+.quantityNum {
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+}
+
+button {
+    background-color: var(--pink);
+    border-radius: 20px;
+    border: none;
+    width: 120px;
+    height: 50px;
+    font-size: 17px;
+    font-family: "Inter", sans-serif;
+    font-weight: 700;
+    color: white;
+    margin-top: 25px;
 }
