--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -2,16 +2,9 @@
     display: flex;
     flex-flow: row wrap;
     gap: 50px;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .itemContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.item {
-    display: flex;
-    justify-content: flex-start;
+    margin: 0 auto;
 }
